CRC RevEng and development tools

--- a/Help/HTML/SoftwareAndConflicts.html
+++ b/Help/HTML/SoftwareAndConflicts.html
@@ -174,6 +174,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -606,6 +615,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>htop</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -829,6 +847,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+</tr>
+<tr>
+<td>openWebRX</td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -1231,6 +1258,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -1523,6 +1556,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -1929,6 +1968,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -2221,6 +2266,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -2627,6 +2678,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -2919,6 +2976,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -3331,6 +3394,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -3625,6 +3694,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>2.2.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.0</td>
 <td align="center">No</td>
@@ -3774,6 +3849,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v0.20.3</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -4054,6 +4135,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -4348,6 +4435,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>2.2.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.0</td>
 <td align="center">No</td>
@@ -4497,6 +4590,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v0.20.3</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -4775,6 +4874,12 @@
 <td>2.1-9</td>
 <td align="center">No</td>
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
+</tr>
+<tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
 </tr>
 <tr>
 <td>CyberChef</td>
@@ -5071,6 +5176,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>3.0.5</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.2</td>
 <td align="center">No</td>
@@ -5220,6 +5331,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v1.2.1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
