Styling changes for Python2_maint-3.7 branch

--- a/Help/HTML/SoftwareAndConflicts.html
+++ b/Help/HTML/SoftwareAndConflicts.html
@@ -319,6 +319,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>Gpick</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+</tr>
+<tr>
 <td>GQRX</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -1165,6 +1174,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>wl-color-picker</td>
+<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>WSJT-X</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -1356,6 +1374,12 @@
 <td>latest</td>
 <td align="center">No</td>
 <td><a href="https://www.google.com/earth/versions/" rel="nofollow">https://www.google.com/earth/versions/</a></td>
+</tr>
+<tr>
+<td>Gpick</td>
+<td>0.2.5</td>
+<td align="center">No</td>
+<td><a href="https://github.com/thezbyg/gpick">https://github.com/thezbyg/gpick</a></td>
 </tr>
 <tr>
 <td>Gpredict</td>
@@ -2068,6 +2092,12 @@
 <td><a href="https://www.google.com/earth/versions/" rel="nofollow">https://www.google.com/earth/versions/</a></td>
 </tr>
 <tr>
+<td>Gpick</td>
+<td>0.2.5</td>
+<td align="center">No</td>
+<td><a href="https://github.com/thezbyg/gpick">https://github.com/thezbyg/gpick</a></td>
+</tr>
+<tr>
 <td>Gpredict</td>
 <td>2.0-4</td>
 <td align="center">No</td>
@@ -2776,6 +2806,12 @@
 <td>latest</td>
 <td align="center">No</td>
 <td><a href="https://www.google.com/earth/versions/" rel="nofollow">https://www.google.com/earth/versions/</a></td>
+</tr>
+<tr>
+<td>Gpick</td>
+<td>0.2.5</td>
+<td align="center">No</td>
+<td><a href="https://github.com/thezbyg/gpick">https://github.com/thezbyg/gpick</a></td>
 </tr>
 <tr>
 <td>Gpredict</td>
@@ -3492,6 +3528,12 @@
 <td>latest</td>
 <td align="center">No</td>
 <td><a href="https://www.google.com/earth/versions/" rel="nofollow">https://www.google.com/earth/versions/</a></td>
+</tr>
+<tr>
+<td>Gpick</td>
+<td>0.2.6rc1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/thezbyg/gpick">https://github.com/thezbyg/gpick</a></td>
 </tr>
 <tr>
 <td>Gpredict</td>
@@ -4233,6 +4275,12 @@
 <td>latest</td>
 <td align="center">No</td>
 <td><a href="https://www.google.com/earth/versions/" rel="nofollow">https://www.google.com/earth/versions/</a></td>
+</tr>
+<tr>
+<td>Gpick</td>
+<td>0.2.6rc1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/thezbyg/gpick">https://github.com/thezbyg/gpick</a></td>
 </tr>
 <tr>
 <td>Gpredict</td>
@@ -5547,6 +5595,12 @@
 <td><a href="https://www.wireshark.org/" rel="nofollow">https://www.wireshark.org/</a></td>
 </tr>
 <tr>
+<td>wl-color-picker</td>
+<td>master</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/jgmdev/wl-color-picker">https://github.com/jgmdev/wl-color-picker</a></td>
+</tr>
+<tr>
 <td>WSJT-X</td>
 <td>2.5.4</td>
 <td align="center">No</td>
@@ -5586,6 +5640,12 @@
 <p>Ubuntu 20.04</p>
 <ul>
 <li>Geany in 20.04 needs <code>[styling] line_height=0;2;</code> added to Tools&gt;Configuration Files&gt;filetypes.common to see underscores</li>
+</ul>
+</li>
+<li>
+<p>Ubuntu 22.04</p>
+<ul>
+<li>Gpick does not work on Wayland, using wl-color-picker as a substitute</li>
 </ul>
 </li>
 <li>
