Styling changes for Python2_maint-3.7 branch

--- a/Help/HTML/About.html
+++ b/Help/HTML/About.html
@@ -202,6 +202,10 @@ License (GPL v3.0): <a href="https://github.com/gnuradio/gnuradio/blob/main/COPY
 Project: <a href="https://www.google.com/earth/versions/" rel="nofollow">https://www.google.com/earth/versions/</a><br>
 Copyright 2022 Google LLC<br>
 License (zlib)</p>
+<p><strong>Gpick</strong><br>
+Project: <a href="https://github.com/thezbyg/gpick">https://github.com/thezbyg/gpick</a><br>
+Copyright 2009-2016, Albertas Vyšniauskas<br>
+License (BSD-3-Clause): <a href="https://github.com/thezbyg/gpick/blob/master/LICENSE.txt">https://github.com/thezbyg/gpick/blob/master/LICENSE.txt</a></p>
 <p><strong>Gpredict</strong><br>
 Project: <a href="http://gpredict.oz9aec.net/" rel="nofollow">http://gpredict.oz9aec.net/</a><br>
 License (GPL-2.0): <a href="https://github.com/csete/gpredict/blob/master/COPYING">https://github.com/csete/gpredict/blob/master/COPYING</a></p>
@@ -304,12 +308,12 @@ Project: <a href="https://github.com/joeyespo/grip">https://github.com/joeyespo/
 Copyright 2014-2022 Joe Esposito<br>
 License (MIT): <a href="https://github.com/joeyespo/grip/blob/master/LICENSE">https://github.com/joeyespo/grip/blob/master/LICENSE</a></p>
 <p><strong>HackRF</strong><br>
-Project: <a href="https://github.com/greatscottgadgets/hackrf">https://github.com/greatscottgadgets/hackrf</a>
+Project: <a href="https://github.com/greatscottgadgets/hackrf">https://github.com/greatscottgadgets/hackrf</a><br>
 License (GPL-2.0): <a href="https://github.com/greatscottgadgets/hackrf/blob/master/COPYING">https://github.com/greatscottgadgets/hackrf/blob/master/COPYING</a></p>
 <p><strong>ham2mon</strong><br>
 Project: <a href="https://github.com/madengr/ham2mon">https://github.com/madengr/ham2mon</a><br>
-License (GPL-3.0): <a href="https://github.com/madengr/ham2mon/blob/master/LICENSE">https://github.com/madengr/ham2mon/blob/master/LICENSE</a>
-3.8 Fork: <a href="https://github.com/ta6o/ham2mon">https://github.com/ta6o/ham2mon</a>
+License (GPL-3.0): <a href="https://github.com/madengr/ham2mon/blob/master/LICENSE">https://github.com/madengr/ham2mon/blob/master/LICENSE</a><br>
+3.8 Fork: <a href="https://github.com/ta6o/ham2mon">https://github.com/ta6o/ham2mon</a><br>
 3.10 Fork: <a href="https://github.com/bkerler/ham2mon">https://github.com/bkerler/ham2mon</a></p>
 <p><strong>HamClock</strong><br>
 Project: <a href="https://www.clearskyinstitute.com/ham/HamClock/" rel="nofollow">https://www.clearskyinstitute.com/ham/HamClock/</a><br>
@@ -523,9 +527,13 @@ License (GPL-2.0): <a href="https://github.com/derv82/wifite2/blob/master/LICENS
 <p><strong>Wireshark</strong><br>
 Project: <a href="https://www.wireshark.org/" rel="nofollow">https://www.wireshark.org/</a><br>
 License (GPL-2.0): <a href="https://gitlab.com/wireshark/wireshark/-/blob/master/COPYING" rel="nofollow">https://gitlab.com/wireshark/wireshark/-/blob/master/COPYING</a></p>
+<p><strong>wl-color-picker</strong><br>
+Project: <a href="https://github.com/jgmdev/wl-color-picker">https://github.com/jgmdev/wl-color-picker</a><br>
+Copyright 2021 Jefferson González<br>
+License (MIT): <a href="https://github.com/jgmdev/wl-color-picker/blob/main/LICENSE">https://github.com/jgmdev/wl-color-picker/blob/main/LICENSE</a></p>
 <p><strong>WSJT-X</strong><br>
 Project: <a href="https://physics.princeton.edu/pulsar/k1jt/wsjtx.html" rel="nofollow">https://physics.princeton.edu/pulsar/k1jt/wsjtx.html</a><br>
-Copyright 2001-2022  by Joe Taylor, K1JT<br>
+Copyright 2001-2022 by Joe Taylor, K1JT<br>
 License (GPL v3.0): <a href="https://physics.princeton.edu/pulsar/k1jt/wsjtx.html" rel="nofollow">https://physics.princeton.edu/pulsar/k1jt/wsjtx.html</a></p>
 <p><strong>Xastir</strong><br>
 Project: <a href="https://github.com/Xastir/Xastir">https://github.com/Xastir/Xastir</a><br>
